# AFBN

./: README.md
client/: package-lock.json  package.json
client/src/: data.ts  main_account.json  test.json  util.ts
client/src/test/: test.ts
contract/: Cargo.toml  doc.txt
contract/src/: instruction.rs  lib.rs  storage.rs
