[package]
name = "afbn"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = ">=1.18.2,<=2"
spl-token = { version = "4.0", features = [ "no-entrypoint" ] }
tokio = "1.28.0"

[dev-dependencies]
solana-program-test = "1.9.9"
solana-sdk = "1.9.9"

[lib]
crate-type = ["cdylib", "lib"]
